tests/semantic/type_system15/type_system15.err
Error: Subset type S1List can't be derived from record type List in file type_system15.dl at line 15
.type S1List <: List
^--------------------
1 errors generated, evaluation aborted
